# AlignmentC

./: README.md
Alignment/: CMakeLists.txt  affinealignment.cpp  affinealignment.h  affinealignobj.h  alignment.cpp  alignment.h  chromSimMatrix.hpp  main.cpp  makefile  matrixfunc.h  needlemanwunschalignment.h  overlapalignment.cpp  test.cpp
DIAlign/: CMakeLists.txt  affinealignment.cpp  affinealignobj.cpp  affinealignobj.h  alignment.h  chromSimMatrix.cpp  chromSimMatrix.h  main.cpp  test_alignment.cpp
build-Alignment-Desktop-Default/: Alignment  Alignment.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
